--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>illustrator omelina.art site</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <a id="btt"></a>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/manga-temple" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/gilroy-medium" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
